<resources>
    <string name="app_name">Menu for today</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- strings for tutorial_dialog.xml -->
    <string name="tutorial_dialog_title">Welcome to the Menu app!</string>
    <string name="tutorial_tv_1">You should start with creating a database of your dishes</string>
    <string name="tutorial_tv_2">Press the Add button to add the new dish</string>
    <string name="tutorial_tv_3">Press the Refresh button to show the menu advice for the day</string>

    <!-- strings for activity_main.xml -->
    <string name="breakfast">Breakfast</string>
    <string name="salad">Salad</string>
    <string name="dinner">Dinner</string>
    <string name="supper">Supper</string>
    <string name="dessert">Dessert</string>
    <string name="order">To order</string>

    <string name="add_button">ADD</string>
    <string name="refresh_button">REFRESH</string>

    <!-- strings for add_dialog.xml -->
    <string name="add_dish_dialog_title">Add new dish</string>
    <string name="add_dish_dialog_hint">Dish</string>
    <string name="add_dish_dialog_type">Type</string>
    <string name="add_dish_dialog_warning_1">Fill the name field, please</string>
    <string name="add_dish_dialog_warning_2">Fill both name and type, please</string>

    <!-- strings for ListActivity context menu -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_dish_dialog_title">Dish</string>
    <string name="edit_dish_dialog_warning">Write the dish name, please</string>
</resources>